--- a/frontend/RecipeFinder/src/App.css
+++ b/frontend/RecipeFinder/src/App.css
@@ -14,15 +14,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 50px;
 }
-.search-bar{
-  width: 50%;
-  border:1px black;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px black;
 
-}
 .search-button{
   border: 5px solid white;
   border-radius: 8px;
@@ -74,7 +68,5 @@
   z-index: 0;
 }
 .title {
-  z-index:1;
-  font-size: 1.2em;
-  margin-top: -100px;
+ margin: 20px 0;
 }
